--- a/source/BetterLetters.csproj
+++ b/source/BetterLetters.csproj
@@ -70,6 +70,7 @@
     <Compile Include="DFLog.cs" />
     <Compile Include="Patches\ArchivePin_Patch.cs" />
     <Compile Include="Patches\DialogDrawNode_Patch.cs" />
+    <Compile Include="Patches\Dialog_NodeTreeConstructor.cs" />
     <Compile Include="Patches\LetterCanDismissWithRightClick_Patch.cs" />
     <Compile Include="Patches\LetterDrawingPatches.cs" />
     <Compile Include="Patches\OpenLetter_Patch.cs" />
