--- a/source/BetterLetters.csproj
+++ b/source/BetterLetters.csproj
@@ -60,10 +60,20 @@
       <HintPath>C:\Program Files (x86)\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine.IMGUIModule">
+      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BetterLettersMod.cs" />
     <Compile Include="DFLog.cs" />
+    <Compile Include="Patches\ArchivePin_Patch.cs" />
+    <Compile Include="Patches\DialogDrawNode_Patch.cs" />
+    <Compile Include="Patches\DialogFactionInfoNudge.cs" />
+    <Compile Include="Patches\Dialog_NodeTreeConstructor.cs" />
+    <Compile Include="Patches\LetterCanDismissWithRightClick_Patch.cs" />
+    <Compile Include="Patches\LetterDrawingPatches.cs" />
     <Compile Include="Patches\OpenLetter_Patch.cs" />
     <Compile Include="Patches\NewQuestLetterOpen_Patch.cs" />
     <Compile Include="Patches\RemoveLetter_Patches.cs" />
