Remove Dismiss option, add Pin/Unpin option instead

--- a/source/BetterLetters.csproj
+++ b/source/BetterLetters.csproj
@@ -86,6 +86,7 @@
   <ItemGroup>
     <Compile Include="BetterLettersMod.cs" />
     <Compile Include="DFLog.cs" />
+    <Compile Include="LetterUtils.cs" />
     <Compile Include="Patches\ArchivePin_Patch.cs" />
     <Compile Include="Patches\DialogDrawNode_Patch.cs" />
     <Compile Include="Patches\DialogFactionInfoNudge.cs" />
