--- a/source/BetterLetters.csproj
+++ b/source/BetterLetters.csproj
@@ -86,9 +86,10 @@
   <ItemGroup>
     <Compile Include="BetterLettersMod.cs" />
     <Compile Include="DFLog.cs" />
+    <Compile Include="LetterUtils.cs" />
+    <Compile Include="Patches\LetterStackReceiveLetter_Patch.cs" />
     <Compile Include="Patches\ArchivePin_Patch.cs" />
     <Compile Include="Patches\DialogDrawNode_Patch.cs" />
-    <Compile Include="Patches\DialogFactionInfoNudge.cs" />
     <Compile Include="Patches\Dialog_NodeTreeConstructor.cs" />
     <Compile Include="Patches\LetterCanDismissWithRightClick_Patch.cs" />
     <Compile Include="Patches\LetterDrawingPatches.cs" />
