--- a/source/BetterLetters.csproj
+++ b/source/BetterLetters.csproj
@@ -85,9 +85,13 @@
       <HintPath>$(RimWorldDir)\RimWorldWin64_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine.TextRenderingModule">
+      <HintPath>D:\Games\Steam\steamapps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BetterLettersMod.cs" />
+    <Compile Include="Dialog_Snooze.cs" />
     <Compile Include="LogPrefixed.cs" />
     <Compile Include="LetterUtils.cs" />
     <Compile Include="Patches\LetterStackReceiveLetterPatch.cs" />
@@ -100,6 +104,7 @@
     <Compile Include="Patches\NewQuestLetterOpenPatch.cs" />
     <Compile Include="Patches\RemoveLetterPatches.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SnoozeManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="About\About.xml" />
