--- a/source/BetterLetters.csproj
+++ b/source/BetterLetters.csproj
@@ -113,7 +113,7 @@
     <Compile Include="Patches\Patch_Letter_RemoveLetter_KeepOnStack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="SnoozeManager.cs" />
+    <Compile Include="WorldComponent_SnoozeManager.cs" />
     <Compile Include="Utils\CustomWidgets.cs" />
     <Compile Include="Utils\LegacySupport.cs" />
     <Compile Include="Utils\LetterUtils.cs" />
