--- a/source/BetterLetters.csproj
+++ b/source/BetterLetters.csproj
@@ -102,7 +102,7 @@
     <Compile Include="Patches\Patch_Letter_CanCull_KeepSnoozes.cs" />
     <Compile Include="Patches\Patch_LetterStack_ReceiveLetter_SortPinned.cs" />
     <Compile Include="Patches\Patch_Archive_Pin_AddBackToStack.cs" />
-    <Compile Include="Patches\Patch_Dialog_NodeTree_DoWindowContents_AddDialogIcon.cs" />
+    <Compile Include="Patches\Patch_Dialog_NodeTree_DoWindowContents_AddPinSnoozeButtons.cs" />
     <Compile Include="Patches\Patch_Letter_CanDismissWithRightClick_BlockIfPinned.cs" />
     <Compile Include="Patches\Patch_Letter_DrawButton_PinnedBehavior.cs" />
     <Compile Include="Patches\Patch_Letter_OpenLetter_AddDiaOptions.cs" />
@@ -112,6 +112,7 @@
     <Compile Include="Patches\Patch_Letter_RemoveLetter_KeepOnStack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="Utils\Icons.cs" />
     <Compile Include="Utils\LogPrefixed.cs" />
     <Compile Include="WorldComponent_SnoozeManager.cs" />
     <Compile Include="Utils\CustomWidgets.cs" />
@@ -122,6 +123,9 @@
     <Content Include="About\About.xml" />
     <Content Include="About\Preview.png" />
     <Content Include="BetterLetters.csproj.user" />
+    <Content Include="C:\Users\darkf\Desktop\harmony.log.txt">
+      <Link>harmony.log.txt</Link>
+    </Content>
     <Content Include="Defs\Misc\LetterDefs\BetterLettersLetters.xml" />
     <Content Include="Languages\English\Keyed\BetterLetters_Keys.xml" />
   </ItemGroup>
