--- a/source/BetterLetters.csproj
+++ b/source/BetterLetters.csproj
@@ -28,7 +28,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == '1.2|AnyCPU'">
     <OutputPath>..\1.2\Assemblies\</OutputPath>
-    <DefineConstants>v1_2;DEBUG</DefineConstants>
+    <DefineConstants>v1_2</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == '1.3|AnyCPU' ">
     <OutputPath>..\1.3\Assemblies\</OutputPath>
